--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@color/pale_aqua"
+    <gradient
         android:angle="45"
+        android:startColor="@color/pale_aqua"
         android:endColor="@color/white"/>
 
 </shape>
