--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="darkGrey">#434242</color>
     <color name="redColor">#FF0000</color>
     <color name="progress_dialog_background">#68000000</color>
+    <color name="interdimensional_blue">#3201DF</color>
 </resources>
