--- a/app/src/main/res/layout/activity_login_sign_up.xml
+++ b/app/src/main/res/layout/activity_login_sign_up.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.home.HomeActivity">
+        tools:context=".presentation.login.LoginActivity"
+        >
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/main_fragment_container"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:id="@+id/login_sign_up_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:navGraph="@navigation/main_nav_graph"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             app:defaultNavHost="true"
+            app:navGraph="@navigation/login_signup_nav_graph"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
