--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -33,7 +33,7 @@
     </fragment>
     <fragment
         android:id="@+id/quizFragment"
-        android:name="com.sekhgmainuddin.learnwithfun.presentation.quiz.QuizFragment"
+        android:name="com.sekhgmainuddin.learnwithfun.presentation.quiz.fragment.QuizFragment"
         android:label="QuizFragment"
         tools:layout="@layout/fragment_quiz" />
 </navigation>
