--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,198 +1,199 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.login.fragments.LoginFragment"
-    android:background="@drawable/background"
-    android:id="@+id/parent_layout">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/loginAnimation"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginVertical="30dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline30"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:lottie_rawRes="@raw/splash_animation"
-        app:lottie_autoPlay="true"
-        />
+    <data>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontalGuideline30"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3"/>
+    </data>
 
-    <TextView
-        android:id="@+id/welcomeTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline30"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/welcome_to_learn_with_fun"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:fontFamily="sans-serif-medium"
-        />
-
-    <TextView
-        android:id="@+id/descOne"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/welcomeTV"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="40dp"
-        android:textSize="16sp"
-        android:fontFamily="@font/shantellsans_regular"
-        android:text="@string/learning_is_more_effective_when_it_is_active_rather_than_a_passive_process"/>
+        android:layout_height="match_parent"
+        tools:context=".presentation.login.fragments.LoginFragment"
+        android:background="@drawable/background"
+        android:id="@+id/parent_layout">
 
-    <TextView
-        android:id="@+id/descTwo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/descOne"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/learn_with_fun_login_desc"
-        android:textAlignment="center"
-        />
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loginAnimation"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginVertical="30dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/horizontalGuideline30"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:lottie_rawRes="@raw/splash_animation"
+            app:lottie_autoPlay="true" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/phoneNumberCV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/descTwo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:cardBackgroundColor="@android:color/transparent"
-        android:background="@android:color/transparent"
-        app:cardElevation="0dp">
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/horizontalGuideline30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.3" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/welcomeTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline30"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/welcome_to_learn_with_fun"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:fontFamily="sans-serif-medium" />
+
+        <TextView
+            android:id="@+id/descOne"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="5dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:background="@drawable/gradient_border_ll">
+            app:layout_constraintTop_toBottomOf="@id/welcomeTV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAlignment="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="40dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/shantellsans_regular"
+            android:text="@string/learning_is_more_effective_when_it_is_active_rather_than_a_passive_process" />
 
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/ccp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:ccp_countryPreference="in"
-                app:ccp_showNameCode="false"
-                app:ccp_autoDetectCountry="true"
-                />
+        <TextView
+            android:id="@+id/descTwo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toBottomOf="@id/descOne"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/learn_with_fun_login_desc"
+            android:textAlignment="center" />
 
-            <EditText
-                android:id="@+id/phoneEditText"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/phoneNumberCV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/descTwo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:cardBackgroundColor="@android:color/transparent"
+            android:background="@android:color/transparent"
+            app:cardElevation="0dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/mobile_number"
-                android:inputType="phone"
-                android:autofillHints="phone"
-                android:maxLines="1"
-                android:background="@android:color/transparent"
-                android:paddingHorizontal="5dp"/>
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:background="@drawable/gradient_border_ll">
 
-        </LinearLayout>
+                <com.hbb20.CountryCodePicker
+                    android:id="@+id/ccp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:ccp_countryPreference="in"
+                    app:ccp_showNameCode="false"
+                    app:ccp_autoDetectCountry="true" />
 
-    </com.google.android.material.card.MaterialCardView>
+                <EditText
+                    android:id="@+id/phoneEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/mobile_number"
+                    android:inputType="phone"
+                    android:autofillHints="phone"
+                    android:maxLines="1"
+                    android:background="@android:color/transparent"
+                    android:paddingHorizontal="5dp" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/sendOtpButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/phoneNumberCV"
-        app:layout_constraintEnd_toEndOf="@id/phoneNumberCV"
-        app:cornerRadius="10dp"
-        android:text="@string/send_otp"
-        android:textAllCaps="false"
-        android:visibility="visible"/>
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/otpTimeLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/phoneNumberCV"
-        android:layout_marginTop="5dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/phoneNumberCV"
-        android:textStyle="bold"
-        android:text="00:59"/>
+        </com.google.android.material.card.MaterialCardView>
 
-    <TextView
-        android:id="@+id/otpTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:text="@string/otp_verification"
-        app:layout_constraintTop_toBottomOf="@id/otpTimeLeft"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/sendOtpButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/phoneNumberCV"
+            app:layout_constraintEnd_toEndOf="@id/phoneNumberCV"
+            app:cornerRadius="10dp"
+            android:text="@string/send_otp"
+            android:textAllCaps="false"
+            android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/otpDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:text="@string/enter_six_digit_otp_send_on_your_mobile_number"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/otpTitle"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"/>
+        <TextView
+            android:id="@+id/otpTimeLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/phoneNumberCV"
+            android:layout_marginTop="5dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/phoneNumberCV"
+            android:textStyle="bold"
+            android:text="00:59" />
 
-    <com.sekhgmainuddin.learnwithfun.common.customviews.OtpEditText
-        android:id="@+id/otpView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="100dp"
-        android:cursorVisible="false"
-        android:digits="1234567890"
-        android:inputType="number"
-        android:maxLength="6"
-        android:textIsSelectable="false"
-        android:textSize="18sp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/otpDescription" />
+        <TextView
+            android:id="@+id/otpTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@string/otp_verification"
+            app:layout_constraintTop_toBottomOf="@id/otpTimeLeft"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/otpDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@string/enter_six_digit_otp_send_on_your_mobile_number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/otpTitle"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp" />
+
+        <com.sekhgmainuddin.learnwithfun.common.customviews.OtpEditText
+            android:id="@+id/otpView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="100dp"
+            android:cursorVisible="false"
+            android:digits="1234567890"
+            android:inputType="number"
+            android:maxLength="6"
+            android:textIsSelectable="false"
+            android:textSize="18sp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/otpDescription" />
 
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/continueButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginHorizontal="25dp"
-        android:text="@string/continue_"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:cornerRadius="10dp"
-        android:padding="15dp"
-        />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/continueButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginHorizontal="25dp"
+            android:text="@string/continue_"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:cornerRadius="10dp"
+            android:padding="15dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
