--- a/app/src/main/res/drawable/gradient_border_ll.xml
+++ b/app/src/main/res/drawable/gradient_border_ll.xml
@@ -4,9 +4,8 @@
         <shape android:shape="rectangle" >
             <gradient
                 android:angle="0"
-                android:endColor="@color/paris_green"
-                android:centerColor="@color/orange"
-                android:startColor="@color/science_blue" />
+                android:startColor="@color/science_blue"
+                android:endColor="@color/paris_green" />
             <corners android:radius="8dp"/>
         </shape>
     </item>
