--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View"/>
 
     </data>
 
@@ -109,7 +110,8 @@
                     android:autofillHints="phone"
                     android:maxLines="1"
                     android:background="@android:color/transparent"
-                    android:paddingHorizontal="5dp" />
+                    android:paddingHorizontal="5dp"
+                    />
 
             </LinearLayout>
 
@@ -124,7 +126,8 @@
             app:cornerRadius="10dp"
             android:text="@string/send_otp"
             android:textAllCaps="false"
-            android:visibility="visible" />
+            android:visibility="visible"
+            />
 
         <TextView
             android:id="@+id/otpTimeLeft"
