feat: signup api integration completed

--- a/app/src/main/res/layout/fragment_enroll_course.xml
+++ b/app/src/main/res/layout/fragment_enroll_course.xml
@@ -169,7 +169,7 @@
                         android:scaleType="centerCrop"
                         android:background="@drawable/rounded_corners_ll"
                         app:shapeAppearanceOverlay="@style/roundedImageView"
-                        app:imageResource="@{courseDetail.courseThumbnail}"
+                        app:imageUrl="@{courseDetail.courseThumbnail}"
                         app:progressBar="@{progressIndicator}"
                         />
 
