--- a/app/src/main/res/layout/course_video_layout.xml
+++ b/app/src/main/res/layout/course_video_layout.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                app:imageResource="@{videoThumbnail}"
+                app:imageUrl="@{videoThumbnail}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
