--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -128,7 +128,8 @@
             android:layout_marginTop="5dp"
             android:text="@{viewModel.otpTimeLeft}"
             android:textStyle="bold"
-            android:visibility="gone"
+            android:textColor="@color/darkGrey"
+            android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
             app:layout_constraintStart_toStartOf="@id/phoneNumberLayout"
             app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout" />
 
@@ -141,41 +142,46 @@
             android:text="@string/otp_verification"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:visibility="gone"
+            android:textColor="@color/darkGrey"
+            android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/otpTimeLeft" />
 
         <TextView
             android:id="@+id/otpDescription"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:text="@string/enter_six_digit_otp_send_on_your_mobile_number"
-            android:visibility="gone"
+            android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/otpTitle" />
 
-        <com.sekhgmainuddin.learnwithfun.common.customviews.OtpEditText
+        <com.otpview.OTPTextView
             android:id="@+id/otpView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="100dp"
-            android:cursorVisible="false"
-            android:digits="1234567890"
-            android:inputType="number"
-            android:maxLength="6"
-            android:textIsSelectable="false"
-            android:textSize="18sp"
-            android:visibility="gone"
+            android:textColor="@android:color/black"
+            app:otp_text_size="18sp"
+            app:otp_box_background="@drawable/bg_otp_box"
+            app:otp_box_background_active="@drawable/bg_otp_box_active"
+            app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
+            app:otp_box_background_error="@drawable/bg_otp_box_error"
+            app:otp_box_background_success="@drawable/bg_otp_box_success"
+            app:hide_otp_drawable="@drawable/bg_otp_box_hide"
+            app:height="45dp"
+            app:width="40dp"
+            app:box_margin="6dp"
+            app:hide_otp="false"
+            app:length="6"
+            app:otp=""
+            android:layout_marginTop="10dp"
+            android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/otpDescription" />
-
+            app:layout_constraintTop_toBottomOf="@id/otpDescription"
+            />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/continueButton"
