--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,21 +1,293 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
+        <import type="android.view.View" />
+
+        <import
+            alias="UserType"
+            type="com.sekhgmainuddin.learnwithfun.common.enums.UserType" />
+
+        <variable
+            name="viewModel"
+            type="com.sekhgmainuddin.learnwithfun.presentation.login.LoginSignUpViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/parentLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background"
         tools:context=".presentation.login.fragments.SignUpFragment">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:paddingVertical="15dp">
 
-    </FrameLayout>
+            <ImageButton
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:background="@android:color/transparent"
+                android:clickable="true"
+                android:padding="10dp"
+                android:src="@drawable/baseline_arrow_back_ios_new_24"
+                app:layout_constraintBottom_toBottomOf="@id/headerText"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/headerText"
+                app:tint="@color/black" />
+
+            <TextView
+                android:id="@+id/headerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/shantellsans_regular"
+                android:text="@string/create_account"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/learnWithFunAnimation"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:scaleType="centerCrop"
+                android:scaleX="1.2"
+                android:scaleY="1.2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/headerText"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="false"
+                app:lottie_rawRes="@raw/splash_animation" />
+
+            <TextView
+                android:id="@+id/learnWithFunText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/shantellsans_regular"
+                android:text="@string/welcome_to_learn_with_fun_"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/learnWithFunAnimation" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/profileImage"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:visibility="invisible"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="@id/lottieAnimationView"
+                app:layout_constraintStart_toStartOf="@id/lottieAnimationView"
+                app:layout_constraintTop_toTopOf="@id/lottieAnimationView"
+                app:shapeAppearanceOverlay="@style/circularImageView" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/lottieAnimationView"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="20dp"
+                android:elevation="1dp"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toTopOf="@+id/nameLabelTV"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/learnWithFunText"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="false"
+                app:lottie_rawRes="@raw/add_profile_pic_animation" />
+
+            <TextView
+                android:id="@+id/nameLabelTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/noto_sans_medium"
+                android:text="@string/full_name"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toTopOf="@+id/nameInputLayout"
+                app:layout_constraintStart_toStartOf="@id/nameInputLayout"
+                app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/nameInputLayout"
+                style="@style/MyTextInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="5dp"
+                app:boxStrokeWidth="1dp"
+                app:hintEnabled="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/nameLabelTV">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/nameEditText"
+                    style="@style/MyTextInputEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/enter_your_full_name"
+                    android:maxLines="1"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/emailLabelTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/noto_sans_medium"
+                android:text="@string/email_address"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="@id/nameInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
+                app:layout_goneMarginTop="10dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/emailInputLayout"
+                style="@style/MyTextInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                app:boxStrokeWidth="1dp"
+                app:hintEnabled="false"
+                app:layout_constraintEnd_toEndOf="@id/nameInputLayout"
+                app:layout_constraintStart_toStartOf="@id/nameInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/emailLabelTV">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/emailEditText"
+                    style="@style/MyTextInputEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/example_gmail_com"
+                    android:maxLines="1" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/verifyEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/verify_email"
+                android:textAllCaps="false"
+                android:visibility="gone"
+                app:cornerRadius="10dp"
+                app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />
+
+            <TextView
+                android:id="@+id/otpTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="25dp"
+                android:text="@string/otp_verification"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@id/emailInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />
+
+            <TextView
+                android:id="@+id/otpDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/enter_six_digit_otp_send_on_your_email"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/otpTitle" />
+
+            <com.otpview.OTPTextView
+                android:id="@+id/otpView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:visibility="gone"
+                app:box_margin="6dp"
+                app:height="45dp"
+                app:hide_otp="false"
+                app:hide_otp_drawable="@drawable/bg_otp_box_hide"
+                app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
+                app:layout_constraintStart_toStartOf="@id/emailInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/otpDescription"
+                app:length="6"
+                app:otp=""
+                app:otp_box_background="@drawable/bg_otp_box"
+                app:otp_box_background_active="@drawable/bg_otp_box_active"
+                app:otp_box_background_error="@drawable/bg_otp_box_error"
+                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
+                app:otp_box_background_success="@drawable/bg_otp_box_success"
+                app:otp_text_size="18sp"
+                app:width="40dp" />
+
+            <TextView
+                android:id="@+id/userTypeLabelTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/noto_sans_medium"
+                android:paddingBottom="10dp"
+                android:text="@string/select_user_type"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="@id/emailInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/otpView" />
+
+            <include
+                android:id="@+id/learnerUserType"
+                layout="@layout/user_type_layout"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_marginEnd="5dp"
+                app:layout_constraintEnd_toStartOf="@id/teacherUserType"
+                app:layout_constraintStart_toStartOf="@id/emailInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/userTypeLabelTV"
+                bind:userType="@{UserType.LEARNER}"
+                bind:viewModel="@{viewModel}" />
+
+            <include
+                android:id="@+id/teacherUserType"
+                layout="@layout/user_type_layout"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_marginStart="5dp"
+                app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
+                app:layout_constraintStart_toEndOf="@id/learnerUserType"
+                app:layout_constraintTop_toBottomOf="@id/userTypeLabelTV"
+                bind:userType="@{UserType.TEACHER}"
+                bind:viewModel="@{viewModel}" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/createAccountButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/gradient_button_color_blue"
+                android:paddingVertical="5dp"
+                android:text="@string/create_account"
+                android:textAllCaps="false"
+                app:layout_constraintTop_toBottomOf="@id/teacherUserType" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
 </layout>
