--- a/app/src/main/res/navigation/login_signup_nav_graph.xml
+++ b/app/src/main/res/navigation/login_signup_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_signup_nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/signUpFragment">
 
     <fragment
         android:id="@+id/loginFragment"
@@ -28,10 +28,12 @@
         tools:layout="@layout/fragment_sign_up" >
         <argument
             android:name="countryCode"
-            app:argType="integer" />
+            app:argType="integer"
+            android:defaultValue="91"/>
         <argument
             android:name="phoneNumber"
-            app:argType="long" />
+            app:argType="long"
+            android:defaultValue="9999999999L"/>
     </fragment>
     <fragment
         android:id="@+id/onBoardingSliderFragment"
