--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_translucent">#36FFFFFF</color>
     <color name="orange">#FFAB00</color>
     <color name="pale_aqua">#C4CCF6</color>
     <color name="science_blue">#0055DF</color>
