--- a/app/src/main/res/layout/fragment_course_tutorial.xml
+++ b/app/src/main/res/layout/fragment_course_tutorial.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/background"
-            tools:context=".presentation.home.fragments.CourseTutorialFragment">
+            tools:context=".presentation.home.course_tutorial.CourseTutorialFragment">
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/backButton"
